Make sure the right nav is visible when the main content are is too wide.

--- a/Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
+++ b/Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
@@ -2674,6 +2674,7 @@ Contribution wizard styling
 
 .wizard-layout .rightNav {
   position: fixed;
+  right: 30px;
 }
 
 .wizard-layout #col2 {
